--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,20 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
     </properties>
-    <distributionManagement>
-   <snapshotRepository>
-      <id>nexus-snapshots</id>
-      <url>http://localhost:8081/nexus/content/repositories/snapshots</url>
-   </snapshotRepository>
+   <distributionManagement>
+                <!-- Publish versioned releases here -->
+                <repository>
+                        <id>1</id>
+                        <name>Dépôt d’entreprise</name>
+                        <url>http://localhost:8081/nexus/content/repositories/localrepository/</url>
+                </repository>
+
+                <!-- Publish snapshots here -->
+                <snapshotRepository>
+                      <id>1</id>
+                        <name>Dépôt d’entreprise</name>
+                        <url>http://localhost:8081/nexus/content/repositories/localrepository/</url>
+                </snapshotRepository>
 </distributionManagement>
     <dependencies>
 
